--- a/apps/HighLevelActClassifier/mobile/build.gradle
+++ b/apps/HighLevelActClassifier/mobile/build.gradle
@@ -1,36 +1,34 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.model.application'
 
-android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+model{
+    android {
+        compileSdkVersion 23
+        buildToolsVersion '23.0.2'
 
-    defaultConfig {
-        applicationId "edu.ucla.nesl.android.workoutbenchmark"
-        minSdkVersion 21
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
-    }
+        defaultConfig {
+            applicationId "edu.ucla.nesl.android.workoutbenchmark"
+            minSdkVersion.apiLevel 21
+            targetSdkVersion.apiLevel 22
+            versionCode 1
+            versionName "1.0"
+        }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles.add(file('proguard-rules.pro'))
+
+            }
         }
     }
 }
 
 
 
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    wearApp project(':wear')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:design:23.0.1'
-    compile 'com.google.android.gms:play-services-ads:8.1.0'
-    compile 'com.google.android.gms:play-services-identity:8.1.0'
-    compile 'com.google.android.gms:play-services-gcm:8.1.0'
 }
